<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.klasseandroid.InstructorEditQuiz"
    android:orientation="vertical">

    <TextView
        android:id="@+id/firstLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="27sp"/>


    <ListView
        android:id="@+id/questionList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/firstLine"
        android:layout_above="@id/save"/>
    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:background="@drawable/week_button"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"/>



</RelativeLayout>