...
    <string name="app_name">KlasseApp</string>
    <string name="title_activity_student_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>

    <string name="add_button">Add</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="add_next">Add</string>
    <string name="mark">Marks for the question: </string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
...
